# osuinvest

./: .gitignore  README.md  alerts.csv  all_investors.csv  all_stocks_dynamic.csv  all_stocks_static.csv  bank.py  client_loop.py  config.json  constants.py  dsbot.py  fixcol.py  formulas.py  game_related.py  main.ipynb  net_worth_history.csv  osuapi.py  osupeppy.py  player_data_raw.csv  practical_testing.py  prestige_hype.py  pyproject.toml  routines.py  rules.py  season.py  stock_prices_history.csv  templating.py  transactions_history.csv  utils.py  visual.py
1/: alerts.csv  all_investors.csv  all_stocks_dynamic.csv  all_stocks_static.csv  confirmations.csv  id_name.json  name_id.json  net_worth_history.csv  transactions_history.csv
1/ownerships/: 11750028.csv  14176480.csv  14935968.csv  18323396.csv  22603358.csv  251683.csv  2831793.csv  4185400.csv  5783315.csv  6337610.csv  8443945.csv
1/portfolios/: antoine68.csv  antoinemicro.csv  chlidlunk.csv  francoislgrd.csv
ownerships/: 12902063.csv  14176480.csv  14289060.csv  14733798.csv  284905.csv  6337610.csv  thepoon.csv  thuya.csv
portfolios/: antoine68.csv  besta.csv  tanher.csv
